--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
     android:versionName="1.0">
 
     <uses-sdk android:minSdkVersion="16"
-        android:targetSdkVersion="16"
-        android:maxSdkVersion="21" />
+        android:targetSdkVersion="16" />
 
     <application
         android:allowBackup="true"
